--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,12 @@
 name: hotels_50k
 channels:
-  defaults
+  - defaults
 dependencies:
   - python=3.7
   - pip
   - pip:
     - opencv-python
     - tensorflow-gpu>=1.5
+    - numpy
     - sklearn
     - h5py
